  - Enhancement   #955 Option to download SERIES banners instead of SEASON
  - Enhancement   #970 Updated/improved threading functionality to increase stability & throttle downloads on a per site basis
  - Enhancement  #1005 Download different banners for different seasons
  - Enhancement  #1010 Enable the use of Set banners for BoxedSets
  - Fixed defect #1043 Multiple bugs with SratimPlugin
  - Fixed defect #1045 Banners not downloaded if Local Poster file exists
  - Enhancement  #1037 Added Norwegian language to filename scanner
  - Fixed defect #1046 With "play full BluRay disks" selected, audio and video details are UNKNOWN
  - Enhancement  #1048 Ignore special movie versions from filename: "Directors Cut", "Extended Cut" etc.
  - Enhancement  #1052 Append date & time to error log filename
  - Enhancement  #1040 New NMT file path for PCH C-200
  - Fixed defect #1053 Allocine search engine and layout has changed, plugin broken.
  - Enhancement  #1055 Output all errors to log file as well as console
  - Fixed defect #1058 Bug commandline -p parameter no longer works properly
  - Fixed defect #1053 Allocine search engine and layout has changed, plugin broken.
  - Fixed defect #1059 Avoid potential problem in rare combination: multiple library folders, distributed movie parts
  - Fixed defect #1063 Error creating XML file with r1165 & Allocine plugin
  - Fixed defect #1068 TheMovieDb API change
  - Fixed defect #1070 Local fanart, posters & videoimages for Bluray with BDMV/STREAM is not detected

MovieJukebox 1.5
----------------
  - Enhancement  #154 Better handling for trailers, extras & bonus material for movies and TV series
  - Enhancement  #323 TheMovieDB.org plugin (part 1)
  - Enhancement  #455 Split HD Category into 720 and 1080
  - Enhancement  #506 Setting Video Source in NFO file
  - Enhancement  #530 Move preferences out of the XML files into preferences.xsl
  - Enhancement  #595 Manual Language Settings in nfo